--- a/nodejs/conFusionServer/package.json
+++ b/nodejs/conFusionServer/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
